--- a/config
+++ b/config
@@ -67,6 +67,10 @@ output VGA-1  pos 0 -900
 #
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
+input "type:keyboard" {
+    xkb_layout us,ru
+    xkb_options grp:win_space_toggle
+}
 
 ### Key bindings
 #
