--- a/dot-config/sway/config
+++ b/dot-config/sway/config
@@ -24,7 +24,7 @@ set $right l
 
 # Your preferred terminal emulator
 # Recommends: foot
-set $term wezterm
+set $term org.wezfurlong.wezterm
 
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
@@ -40,13 +40,14 @@ set $rofi_cmd rofi \
 # Shows a combined list of the applications with desktop files and
 # executables from PATH.
 # TODO: add window with the next release of rofi-wayland
-set $menu $rofi_cmd -show combi -combi-modes drun#run -modes combi
+#_ set $menu $rofi_cmd -show combi -combi-modes drun#run -modes combi
+set $menu wofi --show drun
 
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
 # Requires: desktop-backgrounds-compat, swaybg
-output * bg /var/home/timofey/gits/dotfiles/wallpapers/evening-sky.png fill
+output * bg ~/dotfiles/wallpapers/evening-sky.png fill
 #
 # Example configuration:
 #
